crates/aranya-policy-compiler/tests/data/statements/create_in_action_invalid_statement.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid statement
  |
1 | action foo() {
2 |     create Foo[]=>{}
  |     ^^^^^^^^^^^^^^^^ statement not allowed in action context
3 | }
  |
